src/z80asm/z80asm2/t/30-directive/expected/repti_21.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/30-directive//input/repti_21.asm
Assembling t/30-directive/input/repti_21.asm...
t/30-directive/input/repti_21.asm:1:6: error: Expected identifier after REPTI
    repti ; no identifier
         ^
t/30-directive/input/repti_21.asm:2:1: error: Unexpected ENDR directive
    endr
    ^
t/30-directive/input/repti_21.asm:3:7: error: Expected identifier after REPTI
    repti 27 ; no identifier
          ^
t/30-directive/input/repti_21.asm:4:1: error: Unexpected ENDR directive
    endr
    ^
t/30-directive/input/repti_21.asm:5:8: error: Expected arguments after REPTI
    v repti ; no arguments
           ^
t/30-directive/input/repti_21.asm:6:1: error: Unexpected ENDR directive
    endr
    ^
t/30-directive/input/repti_21.asm:7:12: error: Unmatched '('
    v repti (2+3
               ^
# file: t/30-directive/input/repti_21.asm
Identifier	"ld"	8:2	keyword=LD 
Identifier	"a"	8:5	keyword=A 
Comma	","	8:6	
Identifier	"v"	8:8	keyword=V 
EndOfLine	"\n"	8:9	
t/30-directive/input/repti_21.asm:9:1: error: Unexpected ENDR directive
    endr
    ^
t/30-directive/input/repti_21.asm:10:12: error: Unmatched ')'
    v repti 2+3)
               ^
Identifier	"ld"	11:2	keyword=LD 
Identifier	"a"	11:5	keyword=A 
Comma	","	11:6	
Identifier	"v"	11:8	keyword=V 
EndOfLine	"\n"	11:9	
t/30-directive/input/repti_21.asm:12:1: error: Unexpected ENDR directive
    endr
    ^
t/30-directive/input/repti_21.asm:13:1: error: Unexpected end of file; missing ENDR for REPTI
    v repti a, b, c ; no endr
    ^
